--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Домашняя страница</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
@@ -16,6 +16,8 @@
         <li><a href="#skills">Навыки</a></li>
         <li><a href="#projects">Проекты</a></li>
         <li><a href="#contact">Контакты</a></li>
+        <li><a href="feedback.html">Обратная связь</a></li>
+        <li><a href="login.html">Вход</a></li>
       </ul>
     </nav>
   </header>
